tests/ui/fail/fn-mismatch-const-01.rs
fn main() {}

#[union_fn::union_fn]
trait Foo {
    fn foo() {}
    const fn bar() {}
}
