tests/ui/fail/fn-mismatch-const-01.stderr
error: encountered mismatch in constness for #[union_fn] method
 --> tests/ui/fail/fn-mismatch-const-01.rs:6:5
  |
6 |     const fn bar() {}
  |     ^^^^^

error: mismatch with this method
 --> tests/ui/fail/fn-mismatch-const-01.rs:5:5
  |
5 |     fn foo() {}
  |     ^^
